
5.36  2014-09-01

5.35  2014-08-30
  - Improved monkey_patch to be able to name generated functions.

5.34  2014-08-29
  - Added original_remote_address attribute to Mojo::Transaction.
  - Fixed bug where Mojolicious::Commands would change @ARGV when loaded.

5.33  2014-08-24
  - Improved Mojo::Date to be able to handle higher precision times.
  - Improved Mojo::ByteStream performance.

5.32  2014-08-21
  - Added to_datetime method to Mojo::Date.
  - Improved Mojo::Date to support RFC 3339.

5.31  2014-08-19
  - Improved Mojolicious::Static to allow custom content types.
  - Improved url_for performance.

5.30  2014-08-17
  - Improved Mojolicious::Static to only handle GET and HEAD requests.
  - Improved Mojo::URL performance.
  - Improved url_for performance slightly.
  - Fixed bug where DATA sections sometimes got corrupted after forking, which
    caused applications to fail randomly.
  - Fixed Mojo::IOLoop::Client to use a timeout for every connection.

5.29  2014-08-16
  - Added helpers method to Mojolicious::Controller.
  - Improved performance of .ep templates slightly.
  - Fixed "0" value bug in Mojolicious::Plugin::EPRenderer.

5.28  2014-08-13
  - Improved performance of nested helpers and helpers in templates
    significantly.
  - Improved Mojo::JSON to generate smaller JSON by not escaping the "/"
    character.

5.27  2014-08-11
  - Added support for nested helpers.
  - Added get_helper method to Mojolicious::Renderer.
  - Added n function to ojo.
  - Fixed bug in Mojolicious::Routes::Match where placeholder values got
    merged too early.

5.26  2014-08-09
  - Improved WebSocket performance.
  - Fixed proxy exception handling bug in Mojo::UserAgent.
  - Fixed bug where Mojo::Transaction::WebSocket would build incorrect frames
    if the FIN bit was not set.

5.25  2014-08-07
  - Added reduce method to Mojo::Collection. (sri, batman)
  - Added if_none_match method to Mojo::Headers.
  - Added is_fresh method to Mojolicious::Static.